lib/src/compiler/tests/testdata/errors/151.out
error[E029]: invalid escape sequence
 --> line:3:19
  |
3 |     $a = "/الدفاع+\x[هة]وزار/"
  |                   ^^ expecting two hex digits after `\x`